--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-<title>Change LB(F5) settings</title>
+	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+	<title>Change LB(F5) settings</title>
+	<script type="text/javascript" src="../javascripts/jquery-2.1.4.js"></script>
 </head>
 <body>
 	<div id="svList">
