--- a/public/html/main.html
+++ b/public/html/main.html
@@ -17,11 +17,15 @@
 			<br>
 		<input type="button" value="Submit" onclick="doSubmit()">
 	</div>
-	<script type="text/javascript">
-		
-		function doSubmit( ) {
-			alert(123);
-		}
-	</script>
+</body>
 
-</body></html>
+<script type="text/javascript">
+	jQuery(function($) {
+		alert("123");
+	});
+
+	function doSubmit( ) {
+		alert(123);
+	}
+</script>
+</html>
