--- a/public/html/main.html
+++ b/public/html/main.html
@@ -4,6 +4,7 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 	<title>Change LB(F5) settings</title>
 	<script type="text/javascript" src="../javascripts/jquery-2.1.4.js"></script>
+	<script type="text/javascript" src="../javascripts/util.js"></script>
 </head>
 <body>
 	<div id="svList">
@@ -21,7 +22,7 @@
 
 <script type="text/javascript">
 	jQuery(function($) {
-		alert("123");
+		ajaxGetServerStatus();
 	});
 
 	function doSubmit( ) {
