--- a/public/html/main.html
+++ b/public/html/main.html
@@ -29,7 +29,18 @@
 	});
 
 	function doSubmit( ) {
-		alert(123);
+		$("input[name='checkbox']").each(function(){
+			var id = $(this).attr("id");
+
+			if($(this).attr("checked"))
+			{
+				alert('id:' + id + '--checked');
+			}
+			else
+			{
+				alert('id:' + id + '--unchecked');
+			}
+		});
 	}
 </script>
 </html>
